hellopico8 second commit
First attempt to fix corrupted pico8 screenshot.

--- a/hellopico8.html
+++ b/hellopico8.html
@@ -69,7 +69,7 @@
 
   <p>
 
-  <img src="images\p8filedirectory.png" alt="Screenshot showing where my cartridge files are located." style = "width:1217px;height:614px;" class="center">
+  <img src="images\PICODIR.png" alt="Screenshot showing where my cartridge files are located." style = "width:1217px;height:614px;" class="center">
   <div> Screenshot showing where my cartridge files are located. </div>
 
 </body>
